opam-version: "2.0"
name: "ush"
version: "1.4.0"
maintainer: "Namdak Tonpa <maxim@synrc.com>"
authors: [ "Groupoid Infinity" ]
homepage: "https://sh.5ht.co/"
bug-reports: "https://github.com/BitEdits/sh/issues"
dev-repo: "https://github.com/BitEdits/sh"
synopsis: "POSIX Mini Shell"
license: "ISC"
depends: [
  "dune" {>= "2.9"}
  "zarith" {>= "1.12"}
  "ocaml" {>= "4.14"}
  "menhir" {>= "20220210"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
